corrected last push for fixing emotions panel cut off. 1d thumbs need to be relative, but relative cuts off the emotions panel (even tho its absolute, z-index didnt help), so i had to create a transparent wrapper for 1d thumbs. also updated mouse-over backgrounds light/dark again

--- a/app/sass/home.sass
+++ b/app/sass/home.sass
@@ -88,7 +88,7 @@ body.home
     +border-blue
     +user-select
     +cursor
-    width: 688px
+    width: 686px
     margin-bottom: 20px
 
     img.dreamstar
@@ -113,7 +113,7 @@ body.home
       top: 0
       left: 0
       padding: 30px 40px
-      width: 608px
+      width: 606px
 
       p
         +font(16)
@@ -164,13 +164,13 @@ body.home
     +round(12)
     +glow-blue(40)
     +border-blue
-    width: 688px
+    width: 686px
 
     #publicStream
       +round(11)
       +shine-blue-alpha(20)
       padding: 8px
-      width: 672px
+      width: 670px
 
       .today, .todayFilter, .dreamsFilter, h1.in
         +bold
@@ -195,6 +195,9 @@ body.home
         +border-light
         +round(8)
         color: #fff
+
+      .matrix
+        margin: 62px 0 0
 
       .noEntries
         +round(12)
